--- a/README.org
+++ b/README.org
@@ -1,8 +1,8 @@
 #                            -*- mode: org; -*-
 #
-#+TITLE:              OpenFOAM-dev Third-Party packages
+#+TITLE:              OpenFOAM-10 Third-Party packages
 #+AUTHOR:                  The OpenFOAM Foundation
-#+DATE:                       22th December 2021
+#+DATE:                       11th July 2022
 #+LINK:                     http://www.openfoam.org
 #+OPTIONS: author:nil ^:{}
 # Copyright (c) 2014-2021 OpenFOAM Foundation.
@@ -30,7 +30,7 @@
             https://ftp.gnu.org/gnu/mpc/mpc-1.0.1.tar.gz
 *** Parallel Processing
 ***** Scotch
-      Scotch-6.0.9 is provided with ThirdParty-dev or the original source pack
+      Scotch-6.0.9 is provided with ThirdParty-10 or the original source pack
       may be obtained from:
       + Scotch/PtScotch: https://gforge.inria.fr/frs/download.php/file/38187/scotch_6.0.9.tar.gz
 ***** OpenMPI
